@@ -1,3 +1,7 @@
+2012-09-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* Makefile.am: Update to Automake 1.12.4
+
 2012-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* Makefile.in: Update to Automake 1.12.3
